2000-11-20  H.J. Lu  <hjl@gnu.org>

	* ia64-tdep.c (gdbarch_tdep): Change reference from
	ELFOSABI_MONTEREY to ELFOSABI_AIX.

2000-11-20  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* c-valprint.c (print_function_pointer_address):  New function
	to automatically dereference a function pointer for printing
	if necessary.
	(c_val_print):  Use print_function_pointer_address when printing
	function pointer addresses.

2000-11-20  J.T. Conklin  <jtc@redback.com>

	* gdbserver/low-nbsd.c: Fix typos.

2000-11-20  Jeffrey A Law  (law@cygnus.com)

        * pa64solib.c (add_to_solib): Pass TARGET to pa64_solib_load_symbols.

Mon Nov 20 23:21:53 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS: Peter Schauer and Kevin Buettner maintain AIX.  Jim
 	Blandy, Kevin Buettner and Peter Schauer share shared libs.

	From Nick Duffek:
 	* MAINTAINERS: Share responsibility for
 	Solaris/x86 between co-maintainers.

	* MAINTAINERS: Add linespec as a separate component.
	
Mon Nov 20 14:29:39 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* command.h (error_no_arg): Add noreturn attribute to declaration.

Fri Nov 17 16:07:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* utils.c (xvasprintf, xasprintf): New functions.
	* defs.h (xvasprintf, xasprintf): Add declarations.

	* remote.c (add_packet_config_cmd): Use function xasprintf instead
 	of asprintf.
	* utils.c (vfprintf_maybe_filtered, vfprintf_unfiltered): Use
 	function xvasprintf instead of vasprintf.

	* TODO (xasprintf): Update.

Mon Nov 20 12:22:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Mention ``extern'' and ``STREQ'' cleanups.

2000-11-19  Jim Blandy  <jimb@redhat.com>

	* symtab.c (no_symtab_msg): Remove definition.
	(sources_info): Replace use of no_symtab_msg with the string
 	itself.
	* linespec.c (no_symtab_msg): Remove declaration.
	(decode_line_1): Replace uses of no_symtab_msg with the string
 	itself.

2000-11-17  Kevin Buettner  <kevinb@redhat.com>
